--- a/bot/package.json
+++ b/bot/package.json
@@ -15,11 +15,15 @@
     "graphql-request": "^6.1.0",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.6",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "typescript": "^5.3.3",
     "ts-node": "^10.9.2"
   },
