--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,6 +1,7 @@
 # Discord Bot Configuration
 DISCORD_TOKEN=your_discord_bot_token_here
 DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_CLIENT_SECRET=your_discord_client_secret_here
 DISCORD_GUILD_ID=your_discord_server_id_here
 DISCORD_CHANNEL_ID=your_notification_channel_id_here
 
