--- a/bot/package.json
+++ b/bot/package.json
@@ -17,7 +17,8 @@
     "sqlite3": "^5.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
